<resources>
    <string name="app_name">Places Search</string>
    <string name="tab_text_1">Search</string>
    <string name="tab_text_2">Favorites</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="keyword">Keyword</string>
    <string name="keyword_msg">Enter Keyword</string>
    <string name="category">Category</string>
    <string name="distance">Distance (in miles)</string>
    <string name="dist_msg">Enter distance (default 10 miles)</string>
    <string name="from">From</string>
    <string name="curr_loc">Current Location</string>
    <string name="other_loc">Other. Specify location</string>
    <string name="loc_msg">Type in the Location</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="fav">fav</string>
    <string name="no_fav">no_fav</string>
    <string name="twitter_link">https://twitter.com/intent/tweet?</string>
    <!--<string name="url">https://electric-autumn-200304.appspot.com</string>-->
    <string name="url">"http://10.0.2.2:3000"</string>
    <string name="info">Info</string>
    <string name="photos">Photos</string>
    <string name="map">Map</string>
    <string name="reviews">Reviews</string>
    <string name="error_msg">Please enter mandatory field</string>
    <string name="add_fav"> was added to favorites</string>
    <string name="remove_fav"> was removed from favorites</string>
    <string name="share">Share</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="categories">
        <item>Default</item>
        <item>Accounting</item>
        <item>Airport</item>
        <item>Amusement park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>ATM</item>
        <item>Bakery</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bicycle Store</item>
        <item>Book Store</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Dealer</item>
        <item>Car Rental</item>
        <item>Car Repair</item>
        <item>Car Wash</item>
        <item>Casino</item>
        <item>Cemetery</item>
        <item>Church</item>
        <item>City Hall</item>
        <item>Clothing Store</item>
        <item>Convenience Store</item>
        <item>Courthouse</item>
        <item>Dentist</item>
        <item>Department Store</item>
        <item>Doctor</item>
        <item>Electrician</item>
        <item>Electronics Store</item>
        <item>Embassy</item>
        <item>Fire Station</item>
        <item>Florist</item>
        <item>Funeral Home</item>
        <item>Furniture Store</item>
        <item>Gas Station</item>
        <item>Gym</item>
        <item>Hair Care</item>
        <item>Hardware Store</item>
        <item>Hindu Temple</item>
        <item>Home Goods Store</item>
        <item>Hospital</item>
        <item>Insurance Agency</item>
        <item>Jewelry Store</item>
        <item>Laundry</item>
        <item>Lawyer</item>
        <item>Library</item>
        <item>Liquor Store</item>
        <item>Local Government Office</item>
        <item>Locksmith</item>
        <item>Lodging</item>
        <item>Meal Delivery</item>
        <item>Meal Takeaway</item>
        <item>Mosque</item>
        <item>Movie Rental</item>
        <item>Movie Theater</item>
        <item>Moving Company</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Painter</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Pet Store</item>
        <item>Pharmacy</item>
        <item>Physiotherapist</item>
        <item>Plumber</item>
        <item>Police</item>
        <item>Post Office</item>
        <item>Real Estate Agency</item>
        <item>Restaurant</item>
        <item>Roofing Contractor</item>
        <item>Rv pPark</item>
        <item>School</item>
        <item>Shoe Store</item>
        <item>Shopping Mall</item>
        <item>Spa</item>
        <item>Stadium</item>
        <item>Storage</item>
        <item>Store</item>
        <item>Subway Station</item>
        <item>Supermarket</item>
        <item>Synagogue</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Veterinary Care</item>
        <item>Zoo</item>
    </string-array>

    <string-array name="travel_mode">
        <item>Driving</item>
        <item>Walking</item>
        <item>Transit</item>
        <item>Bicycling</item>
    </string-array>

    <string-array name="review_type">
        <item>Google Reviews</item>
        <item>Yelp Reviews</item>
    </string-array>

    <string-array name="review_sort_order">
        <item>Default Order</item>
        <item>Highest Rating</item>
        <item>Lowest Rating</item>
        <item>Most Recent</item>
        <item>Least Recent</item>
    </string-array>

    <string name="title_activity_place_details">PlaceDetailsActivity</string>
</resources>
