<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/searchLayout">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/keyword" />

    <EditText
        android:id="@+id/keyword_txt"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/keyword_msg"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="88dp"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="115dp"
        android:entries="@array/categories"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="147dp"
        android:text="@string/distance" />

    <EditText
        android:id="@+id/dist_txt"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="173dp"
        android:ems="10"
        android:hint="@string/dist_msg"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="230dp"
        android:text="@string/from" />

    <RadioGroup
        android:id="@+id/fromRadioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView4">

        <RadioButton
            android:id="@+id/from_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/curr_loc"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/from_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other_loc"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <AutoCompleteTextView
        android:id="@+id/locTextView"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="142dp"
        android:enabled="false"
        android:hint="@string/loc_msg" />


    <Button
        android:id="@+id/searchBtn"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="72dp"
        android:text="@string/search" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/searchBtn"
        android:layout_marginEnd="19dp"
        android:text="@string/clear" />

    <TextView
        android:id="@+id/keywordErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="Please enter mandatory fields"
        android:textColor="@color/colorAccent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/locErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/locTextView"
        android:layout_below="@+id/fromRadioGrp"
        android:text="Please enter mandatory fields"
        android:textColor="@color/colorAccent"
        android:visibility="invisible" />


</RelativeLayout>